<resources>
    <string name="app_name">soubuCRM</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_ok">好的</string>
    <string name="permission_explain_storage">我们需要读取您的存储文件来让您更好的使用我们的应用</string>
    <string name="click_again_to_quit">再按一次退出搜布CRM</string>
    <string name="home_page">首页</string>
    <string name="crm">CRM</string>
    <string name="todo">待办</string>
    <string name="last_month">上月</string>
    <string name="this_month">本月</string>
    <string name="turnover_volume">成交额</string>
    <string name="monthly_target">月度目标</string>
    <string name="rmb_label">￥</string>
    <string name="completed">已完成</string>
    <string name="performance_goal">业绩目标</string>
    <string name="work_plan">工作计划</string>
    <string name="sales_performance">销售业绩</string>
    <string name="sales_executive">销售执行力</string>
    <string name="last_week">上周</string>
    <string name="this_week">本周</string>
    <string name="visit_plan">访客计划</string>
    <string name="customer_follow_up">客户跟进</string>
    <string name="work_report">工作报告</string>
    <string name="total_turnover">总计成交额</string>
    <string name="unit_price">单价</string>
    <string name="numbers_of_customer">客户数</string>
    <string name="contract_number">合同数</string>
    <string name="total_follow_up">总跟进</string>
    <string name="call_in_attendance">拜访签到汇总</string>
    <string name="new_clue">新增线索</string>
    <string name="new_customer">新增客户</string>
    <string name="new_business_opportunity">新增商机</string>
    <string name="new_contract">新增合同</string>
    <string name="customer_management">客户管理</string>
    <string name="business_management">业务管理</string>
    <string name="popular_functions">常用功能</string>
    <string name="customer">客户</string>
    <string name="all_customer">全部客户</string>
    <string name="clue">线索</string>
    <string name="all_clue">全部线索</string>
    <string name="business_opportunity">商机</string>
    <string name="all_business_opportunity">全部商机</string>
    <string name="contract">合同</string>
    <string name="all_contract">全部合同</string>
    <string name="sales_management">销售管理</string>
    <string name="company_contacts">公司通讯录</string>
    <string name="contract_management">合同管理</string>
    <string name="back_sales_management">回款管理</string>
    <string name="product_management">产品管理</string>
    <string name="customer_high_seas">客户公海</string>
    <string name="weekly_and_monthly_report">周报月报</string>
    <string name="approval">审批</string>
    <string name="contract_approval">合同审批</string>
    <string name="business_card_scanning">名片扫描</string>
    <string name="nearby_customers">附近客户</string>
    <string name="fill_in_follow_up">填写跟进</string>
    <string name="new_reminder">新增提醒</string>
    <string name="new_plan">新增计划</string>
    <string name="no_reminder">不提醒</string>
    <string name="remind">提醒</string>
    <string name="all">全部</string>
    <string name="remind_message">消息提醒</string>
    <string name="filter">筛选</string>
    <string name="sort">排序</string>
    <string name="clear_out">清空</string>
    <string name="confirm">确定</string>
    <string name="last_follow_time_with_colon">最新跟进时间 : </string>
    <string name="related_customers_with_colon">关联客户: </string>
    <string name="contact">联系人</string>
    <string name="follow_state_with_colon">跟进状态 : </string>
    <string name="follow_result_with_colon">跟进结果 : </string>
    <string name="follow_function_with_colon">跟进方式 : </string>
    <string name="loading">正在加载...</string>
    <string name="save">保存</string>
    <string name="add_clue">新建线索</string>
    <string name="edit_clue">编辑线索</string>
    <string name="essential_information">基本信息</string>
    <string name="connection_information">联系信息</string>
    <string name="contact_information">联系人信息</string>
    <string name="other_information">其他信息</string>
    <string name="manager_information">负责人信息</string>
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="company_name">公司名称</string>
    <string name="post">职位</string>
    <string name="phone">电话</string>
    <string name="mobile">手机</string>
    <string name="qq">QQ号</string>
    <string name="wechat">微信</string>
    <string name="wangwang">旺旺</string>
    <string name="email">邮箱</string>
    <string name="website">网址</string>
    <string name="area">地区</string>
    <string name="address">地址</string>
    <string name="postcode">邮编</string>
    <string name="add_contact">添加联系人</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="follow_state">跟进状态</string>
    <string name="clue_from">线索来源</string>
    <string name="remark">备注</string>
    <string name="manager">负责人</string>
    <string name="in_department">所属部门</string>
    <string name="required_fill">必填</string>
    <string name="required_choose">必选</string>
    <string name="follow_plan">跟进计划</string>
    <string name="follow_record">跟进记录</string>
    <string name="add_follow_record">新增跟进记录</string>
    <string name="add_follow_plan">新增跟进计划</string>
    <string name="clue_home">线索主页</string>
    <string name="transfer_to_other">转移给其他人</string>
    <string name="transfer_customer">转成客户</string>
    <string name="transfer_customer_high_seas">转入客户公海</string>
    <string name="transfer_contract">转成合同</string>
    <string name="clue_spec">线索详情</string>
    <string name="edit">编辑</string>
    <string name="please_complete_required">请将%s填写完整</string>
    <string name="add_customer">新建客户</string>
    <string name="edit_customer">编辑客户</string>
    <string name="customer_name">客户名称</string>
    <string name="customer_type">客户类型</string>
    <string name="customer_property">客户属性</string>
    <string name="level">级别</string>
    <string name="customer_source">客户来源</string>
    <string name="operating_products">经营产品</string>
    <string name="personal_size">人员规模</string>
    <string name="customer_home">客户主页</string>
    <string name="customer_spec">客户详情</string>
    <string name="customer_state">客户状态</string>
    <string name="add_business_opportunity">新建商机</string>
    <string name="business_opportunity_title">商机标题</string>
    <string name="related_customer">关联客户</string>
    <string name="related_product">关联产品</string>
    <string name="signing_amount">签单金额</string>
    <string name="expected_time_to_sign">预计签单时间</string>
    <string name="actual_signing_time">实际签单时间</string>
    <string name="business_opportunity_source">商机来源</string>
    <string name="business_opportunity_type">商机类型</string>
    <string name="business_opportunity_status">商机状态</string>
    <string name="business_opportunity_spec">商机详情</string>
    <string name="business_opportunity_home">商机主页</string>
    <string name="edit_business_opportunity">编辑商机</string>
    <string name="add_contract">新建合同</string>
    <string name="edit_contract">编辑合同</string>
    <string name="contract_title">合同标题</string>
    <string name="related_business_opportunity">关联商机</string>
    <string name="contract_type">合同类型</string>
    <string name="contract_serial_number">合同编号</string>
    <string name="contract_amount_price">合同金额</string>
    <string name="contract_status">合同状态</string>
    <string name="start_date">开始日期</string>
    <string name="finish_date">结束日期</string>
    <string name="pay_method">付款方式</string>
    <string name="client_signed_person">客户方签约人</string>
    <string name="signed_person">我方签约人</string>
    <string name="signed_date">签约日期</string>
    <string name="contract_attachments">合同附件</string>
    <string name="contract_home">合同主页</string>
    <string name="contract_spec">合同详情</string>
    <string name="related_contact">关联联系人</string>
    <string name="colon">:</string>
    <string name="bigger_than"> &gt; </string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="follow_method">跟进方式</string>
    <string name="follow_time">跟进时间</string>
    <string name="expected_contact">预计联系人</string>
    <string name="expected_follow_time">预计跟进时间</string>
    <string name="remind_time">提醒时间</string>
    <string name="remind_function">提醒方式</string>
    <string name="add_follow_record_time_error">您只能选择现在以前的时间</string>
    <string name="add_follow_plan_time_error">您只能选择现在以后的时间</string>
    <string name="clue_status">线索状态</string>
    <string name="related_clue">关联线索</string>
    <string name="title_empty_error">标题不能为空</string>
    <string name="content_empty_error">内容不能为空</string>
    <string name="follow_time_empty_error">请选择跟进时间</string>
    <string name="remind_time_empty_error">请选择提醒时间</string>
    <string name="follow_method_empty_error">请选择跟进方式</string>
    <string name="follow_clue">跟进线索</string>
    <string name="follow_customer">跟进客户</string>
    <string name="follow_business_opportunity">跟进商机</string>
    <string name="follow_contract">跟进合同</string>
    <string name="please_choose_follow_object">请选择跟进对象</string>
    <string name="please_input_clue_name">请输入线索名称</string>
    <string name="please_input_customer_name">请输入客户名称</string>
    <string name="please_input_business_opportunity_name">请输入商机名称</string>
    <string name="please_input_contract_name">请输入合同名称</string>
    <string name="find_employee">搜索同事</string>
    <string name="sales_back_plan">回款计划</string>
    <string name="add_sales_back_plan">新增回款计划</string>
    <string name="already_sales_back">已回款</string>
    <string name="add_already_sales_back">新建已回款</string>
    <string name="plan_date_of_sales_back">计划回款日期</string>
    <string name="plan_price_of_sales_back">计划回款金额</string>
    <string name="method_of_sales_back">回款方式</string>
    <string name="payee">收款人</string>
    <string name="date_of_sales_back">回款日期</string>
    <string name="price_of_sales_back">回款金额</string>
    <string name="percent_of_sales_back">回款百分比</string>
    <string name="price_of_bill">开票金额</string>
    <string name="contact_spec">联系人详情</string>
    <string name="please_input_user_name_or_email">请输入用户名或邮箱</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="no_user_to_register">没有账号?立即注册</string>
    <string name="please_input_common_email">请输入常用邮箱地址</string>
    <string name="please_input_user_name">请输入手机号或邮箱</string>
    <string name="password_requirement">8位以上数字或字母</string>
    <string name="password_again">密码确认</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="wrong_email">邮箱格式不正确</string>
    <string name="two_password_not_same">两次密码不匹配</string>
    <string name="password_regular_wrong">密码需要8位以上数字或字母</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="register_success_message">注册成功,请去邮箱激活</string>
    <string name="empty_data">暂无数据</string>
    <string name="cancel">取消</string>
    <string name="rush_in">抢入</string>
    <string name="plus_symbol">+</string>
    <string name="clue_high_seas">线索公海</string>
    <string name="transfer_customer_now">同步转为客户</string>
    <string name="transfer_contract_now">同步转为合同</string>
    <string name="succeed_rush_clue_message">您已成功抢到线索: %s</string>
    <string name="succeed_rush_customer_message">您已成功抢到客户: %s</string>
    <string name="look_clue_spec">查看线索详情</string>
    <string name="look_customer_spec">查看客户详情</string>
    <string name="continue_rush">继续抢</string>
    <string name="choose_transfer">选择转移人</string>
    <string name="choose_manager">选择负责人</string>
    <string name="choose_signed_person">选择签约人</string>
    <string name="email_wrong_message">邮箱格式错误</string>
    <string name="mobile_wrong_message">手机格式错误</string>
    <string name="phone_wrong_message">电话格式错误</string>
    <string name="add_params_succeed_message">已成功新增该条信息</string>
    <string name="edit_params_succeed_message">已保存您的修改</string>
    <string name="order_turnover">订单成交额</string>
    <string name="order_count">订单数量</string>
</resources>