<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/crm_logo" />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/iv_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login_normal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_user_normal" />

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_user_name"
            android:textColor="@color/title_black"
            android:textColorHint="@color/line_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_clear_user"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/et_clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/ll_user"
        android:layout_margin="20dp"
        android:background="@drawable/bg_login_normal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_lock_normal" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textColor="@color/title_black"
            android:textColorHint="@color/line_color"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/et_clear"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_transfer_pwd"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/hide_pwd" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/ll_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_orange_login_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/two_translucent_black"
        android:text="@string/no_user_to_register"
        android:textColor="@color/title_black"
        android:textSize="16sp" />
</RelativeLayout>