<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/selector_item_white_grey_bg"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_sales_pass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/payee"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/colon"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_payee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="吴超"
                android:textColor="@color/title_black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0"
            android:text="2016-03-02 15:21"
            android:textColor="@color/subtitle_grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_grey_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_sales_back"
                android:textColor="@color/title_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:layout_marginRight="4dp"
                android:textColor="@color/title_black"/>
            <TextView
                android:id="@+id/tv_sales_back_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2016-08-25"
                android:textColor="@color/subtitle_grey"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_of_sales_back"
                android:textColor="@color/title_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:layout_marginRight="4dp"
                android:textColor="@color/title_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rmb_label"
                android:textColor="@color/subtitle_grey"/>
            <TextView
                android:id="@+id/tv_sales_back_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15000"
                android:textColor="@color/subtitle_grey"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/method_of_sales_back"
                android:textColor="@color/title_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:layout_marginRight="4dp"
                android:textColor="@color/title_black"/>
            <TextView
                android:id="@+id/tv_sales_back_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="现金"
                android:textColor="@color/subtitle_grey"/>
        </LinearLayout>

    </LinearLayout>
    
    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/item_line_grey"/>
</LinearLayout>