<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:orientation="horizontal">

    <com.soubu.crmproject.widget.ColorArcProgressBar
        android:id="@+id/capb_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        app:back_color="@color/subtitle_grey"
        app:back_width="8dp"
        app:front_color1="@android:color/holo_green_light"
        app:front_width="8dp"
        app:is_need_content="true"
        app:is_need_title="true"
        app:max_value="100"
        app:string_title="完成率"
        app:total_engle="360" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/tv_turnover_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnover_volume"
            android:textColor="@color/title_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_monthly_target_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_target"
            android:textSize="14sp"
            android:textColor="@color/subtitle_grey"
            android:layout_below="@+id/tv_turnover_label"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tv_rmb_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_label"
            android:textSize="16sp"
            android:layout_below="@+id/tv_monthly_target_label"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_monthly_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50000.00"
            android:textSize="16sp"
            android:layout_toRightOf="@id/tv_rmb_label"
            android:layout_alignBaseline="@id/tv_rmb_label"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_completed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textSize="14sp"
            android:textColor="@color/subtitle_grey"
            android:layout_toRightOf="@+id/tv_monthly_target_label"
            android:layout_alignBaseline="@+id/tv_monthly_target_label"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tv_rmb_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_label"
            android:textSize="16sp"
            android:layout_below="@+id/tv_completed_label"
            android:layout_alignLeft="@+id/tv_completed_label"
            android:textColor="@color/progressbar_green"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tv_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36000.00"
            android:textSize="16sp"
            android:layout_toRightOf="@id/tv_rmb_label1"
            android:layout_alignBaseline="@id/tv_rmb_label1"
            android:textColor="@color/progressbar_green"
            android:layout_marginTop="4dp"/>
    </RelativeLayout>
</LinearLayout>