<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_date_of_sales_back"
            android:textColor="@color/title_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginRight="4dp"
            android:textColor="@color/title_black"/>
        <TextView
            android:id="@+id/tv_sales_back_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016-08-25"
            android:textColor="@color/subtitle_grey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_date_of_sales_back"
            android:textColor="@color/title_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginRight="4dp"
            android:textColor="@color/title_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_label"
            android:textColor="@color/subtitle_grey"/>
        <TextView
            android:id="@+id/tv_sales_back_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15000"
            android:textColor="@color/subtitle_grey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_date_of_sales_back"
            android:textColor="@color/title_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginRight="4dp"
            android:textColor="@color/title_black"/>
        <TextView
            android:id="@+id/tv_sales_back_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="尾款"
            android:textColor="@color/subtitle_grey"/>
    </LinearLayout>

</LinearLayout>